--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
-  "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+	"version": 2,
+	"builds": [
+		{
+			"src": "api/index.ts",
+			"use": "@vercel/node",
+			"config": {
+				"maxLambdaSize": "50mb"
+			}
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/api/index.ts"
+		}
+	]
 }
